# personal-ai

./: AGENTS.md  PROJECT_CONTEXT.md  README.md  TEST_CLEANUP_MANIFEST.md  TEST_STABILIZATION_REPORT.md  VISION.md  progress.md  pyproject.toml  requirements.txt
app/: cli.py
app/agent_core/: __init__.py  agent_loop.py  runtime_loop.py
app/audio/: __init__.py  whisper_local.py
app/core/: __init__.py  bridge_health.py  di.py  inference_orchestrator.py  task_runner.py
app/dashboard/: __init__.py  collector.py  metrics.py  renderer.py
app/learning/: error_loop_manager.py  error_normalizer.py  error_repair_retriever.py  execution_self_improvement.py  knowledge_error_normalizer.py  recipe_executor.py  repair_retrieval.py
app/memory/: goal_persistence.py
app/recording/: trace_events.py
app/shipping/: __init__.py  candidate_collector.py  doc_generator.py  history.py  kb_updater.py  models.py  policy.py  quality_gate.py  recipe_exporter.py  service.py
app/validation/: __init__.py  knowledge_store.py
docs/: AGENT_CORE.md  CLAUDE_BRIEFING.md  SYSTEM_MAP.md  VIDEO_SES_MODEL_OGRENME_RAPORU.md
feedback/: __init__.py
feedback/audio/: __init__.py  audio_extractor.py  stt_engine.py  transcript_aligner.py
feedback/evaluation/: __init__.py  code_quality.py  houdini_validator.py  scoring.py  td_validator.py
gui/: additional_panels.py
old_tests/: README.md
scripts/: demo_feedback_loop.py
tests/: test_dashboard.py  test_feedback_loop.py  test_inference_orchestrator.py  test_repair_retrieval.py  test_shipping.py  test_stt_pipeline.py  test_validation_pipeline.py
(+27 files in other folders)
